--- a/day2/index.html
+++ b/day2/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="box1">
         <div class="box1a">
-            <img src="https://source.unsplash.com/1600x1000/?north_indian_food" class="box1img" alt="">
+            <img src="https://source.unsplash.com/1600x1000/?chinese_food" class="box1img" alt="">
             <div class="promoted">Promoted</div>
             <div class="discount">50% OFF up to 100</div>
             <div class="time">38 min</div>
@@ -23,6 +23,7 @@
                 food is safe</p>
         </div>
     </div>
+
     <div class="box2">
         <div class="box2-content">
             <h1>Explore the diversities in Bali</h1>
@@ -39,9 +40,14 @@
             <img src="search.png" class="box3img" alt="">
         </div>
     </div>
-
+    
     <div class="box4">
-
+        <img src="https://source.unsplash.com/1600x1000/?beaches" class="box4img" alt="">
+        <div class="box4a">
+            <img src="girl.jpg" class="box4img1" alt="">
+            <h1 class="head4">Sambitee Dash</h1>
+            <h4 class="head4-h4">Webdeveloper</h4>
+        </div>
     </div>
 
 </body>
